welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:24: error: type mismatch;
 found   : Unit
 required: Int
					compteur=compteur+1
                                                ^countTeen:22: error: type mismatch;
 found   : Unit
 required: Int
				if((d>12 && d<20) )
                                ^